Upgrade from Bootstrap 2 to Bootstrap 3

--- a/app/styles/about.sass
+++ b/app/styles/about.sass
@@ -3,9 +3,19 @@
   @import "bootstrap/variables"
 
   .team-column
-    margin-left: 50px
+    padding-left: 0
+
+    ul.thumbnails
+      margin-left: 40px
+      padding: 0
+
+      li
+        list-style-type: none
+        padding-bottom: 20px
+
 
     img
       float: left
       width: 150px
       height: 150px
+
