--- a/app/styles/bootstrap/_sprites.scss
+++ b/app/styles/bootstrap/_sprites.scss
@@ -19,10 +19,10 @@
   display: inline-block;
   width: 14px;
   height: 14px;
-  @include ie7-restore-right-whitespace();
+  //@include ie7-restore-right-whitespace();
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url($iconSpritePath);
+  background-image: url($icon-sprite-path);
   background-position: 14px 14px;
   background-repeat: no-repeat;
   margin-top: 1px;
@@ -46,7 +46,7 @@
 .dropdown-submenu:focus > a > [class^="icon-"],
 .dropdown-submenu:hover > a > [class*=" icon-"],
 .dropdown-submenu:focus > a > [class*=" icon-"] {
-  background-image: url($iconWhiteSpritePath);
+  background-image: url($icon-white-sprite-path);
 }
 
 .icon-glass              { background-position: 0      0; }
