--- a/app/templates/contribute/ambassador.jade
+++ b/app/templates/contribute/ambassador.jade
@@ -1,4 +1,4 @@
-extends /templates/base
+.img-responsiveextends /templates/base
 
 block content
 
@@ -9,7 +9,7 @@ block content
     div.class-main#ambassador-main
       
       .class_image
-          img(src="/images/pages/contribute/ambassador.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/ambassador.png", alt="")
 
       h2
         span(data-i18n="classes.ambassador_title") Ambassador
