--- a/app/templates/contribute/counselor.jade
+++ b/app/templates/contribute/counselor.jade
@@ -9,7 +9,7 @@ block content
     div.class-main#sounselor-main
       
       .class_image
-          img(src="/images/pages/contribute/counselor.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/counselor.png", alt="")
 
       h2
         span(data-i18n="classes.counselor_title") Counselor
