--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -23,6 +23,6 @@ block content
   div#homepage_button_container
 
     div.homepage_button
-      a#beginner-campaign.btn.btn-warning.btn-large.highlight(href="/play/level/rescue-mission")
+      a#beginner-campaign.btn.btn-warning.btn-lg.highlight(href="/play/level/rescue-mission")
         canvas(width="125", height="150")
         span(data-i18n="home.play") Play
