--- a/app/templates/play/level/modal/multiplayer.jade
+++ b/app/templates/play/level/modal/multiplayer.jade
@@ -7,10 +7,10 @@
   // This section is for later
   
   .form-horizontal
-    .control-group
+    .form-group
       label.control-label(for="multiplayer") Multiplayer
-      .controls
-        input#multiplayer.input-large(name="multiplayer", type="checkbox", checked=multiplayer)
+      .control     
+        input#multiplayer.input-large.form-control(name="multiplayer", type="checkbox", checked=multiplayer)
         span.help-inline Enable others to join your game.
     
   hr
