--- a/app/templates/contribute/adventurer.jade
+++ b/app/templates/contribute/adventurer.jade
@@ -9,7 +9,7 @@ block content
     div.class-main#adventurer-main
       
       .class_image
-          img(src="/images/pages/contribute/adventurer.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/adventurer.png", alt="")
 
       h2
         span(data-i18n="classes.adventurer_title") Adventurer
