--- a/app/templates/contribute/archmage.jade
+++ b/app/templates/contribute/archmage.jade
@@ -9,7 +9,7 @@ block content
     div.class-main#archmage-main
     
       .class_image
-        img(src="/images/pages/contribute/archmage.png", alt="")
+        img.img-responsive(src="/images/pages/contribute/archmage.png", alt="")
 
       h2
         span(data-i18n="classes.archmage_title") Archmage
