--- a/app/templates/contribute/artisan.jade
+++ b/app/templates/contribute/artisan.jade
@@ -9,7 +9,7 @@ block content
     div.class-main#artisan-main
       
       .class_image
-          img(src="/images/pages/contribute/artisan.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/artisan.png", alt="")
 
       h2
         span(data-i18n="classes.artisan_title") Artisan
