--- a/app/templates/contribute/contribute.jade
+++ b/app/templates/contribute/contribute.jade
@@ -12,7 +12,7 @@ block content
         h2(data-i18n="contribute.page_title") Contributing
 
         #homepage_screenshot
-          img(src="/images/pages/contribute/contribute_header.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/contribute_header.png", alt="")
 
         p
           strong(data-i18n="contribute.introduction_desc_intro")
@@ -52,7 +52,7 @@ block content
 
       #archmage
         .class_image.header-scrolling-fix
-          img(src="/images/pages/contribute/archmage.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/archmage.png", alt="")
 
         h3.header-scrolling-fix
           span(data-i18n="classes.archmage_title") Archmage
@@ -115,7 +115,7 @@ block content
       #artisan
 
         .class_image.header-scrolling-fix
-          img(src="/images/pages/contribute/artisan.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/artisan.png", alt="")
 
         h3.header-scrolling-fix
           span(data-i18n="classes.artisan_title") Artisan
@@ -177,7 +177,7 @@ block content
       #adventurer
 
         .class_image.header-scrolling-fix
-          img(src="/images/pages/contribute/adventurer.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/adventurer.png", alt="")
 
         h3.header-scrolling-fix
           span(data-i18n="classes.adventurer_title") Adventurer
@@ -238,7 +238,7 @@ block content
       #scribe
 
         .class_image.header-scrolling-fix
-          img(src="/images/pages/contribute/scribe.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/scribe.png", alt="")
 
         h3.header-scrolling-fix
           span(data-i18n="classes.scribe_title") Scribe
@@ -287,7 +287,7 @@ block content
       #diplomat
 
         .class_image.header-scrolling-fix
-          img(src="/images/pages/contribute/diplomat.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/diplomat.png", alt="")
 
         h3.header-scrolling-fix
           span(data-i18n="classes.diplomat_title") Diplomat
@@ -339,7 +339,7 @@ block content
       #ambassador
 
         .class_image.header-scrolling-fix
-          img(src="/images/pages/contribute/ambassador.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/ambassador.png", alt="")
 
         h3.header-scrolling-fix
           span(data-i18n="classes.ambassador_title") Ambassador
@@ -392,7 +392,7 @@ block content
       #counselor
 
         .class_image.header-scrolling-fix
-          img(src="/images/pages/contribute/counselor.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/counselor.png", alt="")
 
         h3.header-scrolling-fix
           span(data-i18n="classes.counselor_title") Counselor
