--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -9,7 +9,7 @@ block content
     div.class-main#diplomat-main
       
       .class_image
-          img(src="/images/pages/contribute/diplomat.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/diplomat.png", alt="")
 
       h2
         span(data-i18n="classes.diplomat_title") Diplomat
