--- a/app/templates/contribute/scribe.jade
+++ b/app/templates/contribute/scribe.jade
@@ -9,7 +9,7 @@ block content
     div.class-main#scribe-main
       
       .class_image
-          img(src="/images/pages/contribute/scribe.png", alt="")
+          img.img-responsive(src="/images/pages/contribute/scribe.png", alt="")
 
       h2
         span(data-i18n="classes.scribe_title") Scribe
