--- a/app/templates/modal/recover.jade
+++ b/app/templates/modal/recover.jade
@@ -5,10 +5,9 @@ block modal-header-content
 
 block modal-body-content
   .form-inline
-    .control-group
-      label.control-label(for="recover-email", data-i18n="general.email") Email
-      .controls
-        input#recover-email.input-large(name="email", type="email")
+    .form-group
+      label.control-label(for="recover-email", data-i18n="general.email") Email     
+      input#recover-email.input-large.form-control(name="email", type="email")
 
 block modal-body-wait-content
   h3(data-i18n="common.sending") Sending...
