--- a/app/templates/play/level/thang_avatar.jade
+++ b/app/templates/play/level/thang_avatar.jade
@@ -1,6 +1,6 @@
 .thang-avatar-wrapper(class="team-" + (thang.team || "neutral"))
   //canvas(width=100, height=100, title=thang.id + " - " + thang.team)
-  img(src=avatarURL, title=thang.id + " - " + thang.team)
+  img.img-responsive(src=avatarURL, title=thang.id + " - " + thang.team)
   .badge.problems
   .badge.shared-thangs
 if includeName
