A few visual tweaks to the spell view flow.

--- a/app/styles/play/level/tome/spell.sass
+++ b/app/styles/play/level/tome/spell.sass
@@ -33,7 +33,7 @@
   .ace_editor
     @include box-sizing(border-box)
     margin-top: 40px
-    width: 100%
+    width: 98%
     height: 83%
     height: -webkit-calc(100% - 60px - 40px)
     height: calc(100% - 60px - 40px)
@@ -63,7 +63,7 @@
     .executing
       background-color: rgba(216, 255, 255, 0.85)
     .executed
-      background-color: rgba(200, 200, 255, 0.25)
+      background-color: rgba(245, 255, 6, 0.18)
     .problem-marker-info
       background-color: rgba(96, 63, 84, 0.25)
     .problem-marker-warning
@@ -79,7 +79,7 @@
     .ace_marker-layer
       .ace_bracket
         // Override faint gray
-        border-color: #8FF
+        border-color: #BFF
 
     .ace_identifier
-      background-color: rgba(255, 128, 128, 0.15)
+      border-bottom: 1px dotted rgba(255, 128, 128, 0.45)
