--- a/app/templates/play/level/tome/cast_button.jade
+++ b/app/templates/play/level/tome/cast_button.jade
@@ -1,7 +1,7 @@
 div.btn-group.cast-button-group
   .button-progress-overlay
-  button.btn.btn-inverse.banner.cast-button(title=castShortcutVerbose + ": Cast current spell", data-i18n="play_level.tome_cast_button_cast") Spell Cast
-  button.btn.btn-inverse.banner.cast-options-button.dropdown-toggle(data-toggle="dropdown")
+  button.btn.btn-inverse.btn-large.banner.cast-button(title=castShortcutVerbose + ": Cast current spell", data-i18n="play_level.tome_cast_button_cast") Spell Cast
+  button.btn.btn-inverse.btn-large.banner.cast-options-button.dropdown-toggle(data-toggle="dropdown")
     i.icon-cog.icon-white
 
   ul.dropdown-menu.autocast-delays
