--- a/app/templates/editor/thang/edit.jade
+++ b/app/templates/editor/thang/edit.jade
@@ -6,6 +6,7 @@ block content
 
   button.btn.btn-primary#save-button(data-toggle="coco-modal", data-target="modal/save_version")
     | Save
+  button.btn.btn-primary#revert-button(data-toggle="coco-modal", data-target="modal/revert", data-i18n="revert.revert") Revert
   
   h3 Edit Thang Type: "#{thangType.attributes.name}"
 
