Fixed the progress bar for loading pages.

--- a/app/templates/kinds/search.jade
+++ b/app/templates/kinds/search.jade
@@ -23,4 +23,4 @@ block content
     .modal-body.wait.hide
       h3 Reticulating Splines...
       .progress.progress-striped.active
-        .bar
+        .progress-bar
