--- a/app/templates/loading.jade
+++ b/app/templates/loading.jade
@@ -5,4 +5,4 @@ block content
   .loading-screen
     h1(data-i18n="common.loading") Loading...
     .progress.progress-striped.active
-      .bar
+      .progress-bar
