--- a/app/templates/kinds/search.jade
+++ b/app/templates/kinds/search.jade
@@ -8,19 +8,20 @@ block content
   hr
   div.results
     table
-  div.modal.hide.fade#new-model-modal
-    .modal-header
-      h3 Create New #{modelLabel}
-    .modal-body
-      form.form-horizontal
-        .control-group
-          label.control-label(for="name") Name
-          .controls
-            input#name.input-large(name="name", type="text")
-    .modal-footer
-      button.btn(data-dismiss="modal") Cancel
-      button.btn.btn-primary.new-model-submit Create
-    .modal-body.wait.hide
-      h3 Reticulating Splines...
-      .progress.progress-striped.active
-        .progress-bar
+  div.modal.fade#new-model-modal
+    .modal-dialog
+      .modal-content
+        .modal-header
+          h3 Create New #{modelLabel}
+        .modal-body
+          form.form-horizontal
+            .form-group
+              label.control-label(for="name") Name
+              input#name.form-control(name="name", type="text")
+        .modal-footer
+          button.btn(data-dismiss="modal") Cancel
+          button.btn.btn-primary.new-model-submit Create
+        .modal-body.wait.hide
+          h3 Reticulating Splines...
+          .progress.progress-striped.active
+            .progress-bar
