--- a/app/templates/account/wizard_settings_tab.jade
+++ b/app/templates/account/wizard_settings_tab.jade
@@ -20,3 +20,4 @@ canvas#tinting-display(width=200, height=200).img-rounded
           .controls
             .selector(id=group.humanized+"_lightness", name=group.name+'.lightness', data-key='lightness')
       div.clearfix
+div.clearfix
