Fixed the top nav height.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -52,6 +52,9 @@ h1 h2 h3 h4
   
 .nav-tabs > li
   cursor: pointer
+  
+#top-nav .nav
+  margin-bottom: 0
 
 #outer-content-wrapper
   background: #8cc63f url(/images/pages/base/repeat-tile.png) top center
