--- a/app/templates/base.jade
+++ b/app/templates/base.jade
@@ -1,7 +1,7 @@
 body
   #fb-root
   block header
-    .nav.navbar.navbar-fixed-top      
+    .nav.navbar.navbar-fixed-top#top-nav
       .content.clearfix
         .navbar-header
           a.navbar-brand(href='/')
