--- a/app/templates/modal/error.jade
+++ b/app/templates/modal/error.jade
@@ -1,6 +1,7 @@
-.modal.hide.fade#modal-error
-  .modal-header
-    .button.close(type="button", data-dismiss="modal", aria-hidden="true") &times;
-    h3 Error #{status}: #{statusText}
-  .modal-body
-    p #{message}
+.modal.fade#modal-error
+  .modal-dialog
+    .modal-header
+      .button.close(type="button", data-dismiss="modal", aria-hidden="true") &times;
+      h3 Error #{status}: #{statusText}
+    .modal-body
+      p #{message}
