--- a/app/templates/play/level/modal/docs.jade
+++ b/app/templates/play/level/modal/docs.jade
@@ -1,16 +1,17 @@
 // TODO: refactor to be like other modals
-.modal-header
-  button(type='button', data-dismiss="modal", aria-hidden="true").close &times;
-  h3(data-i18n="play_level.guide_title") Guide
-
-.modal-body
-  ul.nav.nav-tabs
-    for doc in docs
-      li
-        a(data-target="#docs_tab_#{doc.slug}", data-toggle="tab") #{doc.name}
-  div.tab-content
-    for doc in docs
-      div.tab-pane(id="docs_tab_#{doc.slug}")!= doc.html
-
-.modal-footer
-  a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
+.modal-dialog
+  .modal-header
+    button(type='button', data-dismiss="modal", aria-hidden="true").close &times;
+    h3(data-i18n="play_level.guide_title") Guide
+  
+  .modal-body
+    ul.nav.nav-tabs
+      for doc in docs
+        li
+          a(data-target="#docs_tab_#{doc.slug}", data-toggle="tab") #{doc.name}
+    div.tab-content
+      for doc in docs
+        div.tab-pane(id="docs_tab_#{doc.slug}")!= doc.html
+  
+  .modal-footer
+    a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
