--- a/app/templates/modal/login.jade
+++ b/app/templates/modal/login.jade
@@ -4,11 +4,11 @@ block modal-header-content
   h3(data-i18n="login.log_in") Log In
 
 block modal-body-content
-  .form-inline
+  .form
     .form-group
       label.control-label(for="login-email", data-i18n="general.email") Email      
       input#login-email.input-large.form-control(name="email", type="email")
-    .control-group
+    .form-group
       label.control-label(for="login-password", data-i18n="forms.password") Password      
       input#login-password.input-large.form-control(name="password", type="password")
 
