--- a/app/templates/modal/signup.jade
+++ b/app/templates/modal/signup.jade
@@ -7,20 +7,20 @@ block modal-body-content
   .modal-content
     .modal-body
       p(data-i18n="signup.description") It's free. Just need a couple things and you'll be good to go:
-      .form-inline
+      .form
         .form-group
           label.control-label(for="signup-email", data-i18n="general.email") Email              
           input#signup-email.form-control.input-large(name="email", type="email")
-        .control-group
+        .form-group
           label.control-label(for="signup-password", data-i18n="forms.password") Password              
           input#signup-password.input-large.form-control(name="password", type="password")
         hr
-        .control-group
-          label.checkbox.control-label(for="signup-subscribe")
+        .form-group.checkbox
+          label.control-label(for="signup-subscribe")
             input#signup-subscribe(name="subscribe", type="checkbox", checked='checked')
             span(data-i18n="signup.email_announcements") Receive announcements by email
-        .control-group
-          label.checkbox.control-label(for="signup-confirm-age") 
+        .form-group.checkbox
+          label.control-label(for="signup-confirm-age") 
             input#signup-confirm-age(name="confirm-age", type="checkbox", checked='checked')
             span(data-i18n="signup.coppa") 13+ or non-USA 
             a(href="http://en.wikipedia.org/wiki/Children's_Online_Privacy_Protection_Act", data-i18n="signup.coppa_why", target="_blank") (Why?)
@@ -31,14 +31,3 @@ block modal-body-wait-content
 block modal-footer
   .modal-footer
     button.btn.btn-primary.btn-large#signup-button(data-i18n="signup.sign_up") Sign Up
-  
-  .modal-footer.network-logins
-    div
-      .fb-login-button(data-show-faces="false", data-width="200", data-max-rows="1", data-scope="email")
-    div
-      .gplus-login-button#gplus-login-button
-    // TODO does not work; the events (clicks, submissions) in new modal do not fire
-    div
-      span(data-i18n="general.or") or
-      span  
-      a(data-toggle="coco-modal", data-target="modal/login", data-i18n="signup.log_in")#link-to-login log in with password
