More fixes for #283

--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -45,7 +45,7 @@
   .tab-pane
     // makes sure the pane itself fills the whole ratio'd space
     position: absolute
-    top: 0
+    top: 10px
     bottom: 0
     left: 0
     right: 0
