--- a/app/templates/kinds/search.jade
+++ b/app/templates/kinds/search.jade
@@ -14,7 +14,7 @@ block content
         .modal-header
           h3 Create New #{modelLabel}
         .modal-body
-          form.form-horizontal
+          form.form
             .form-group
               label.control-label(for="name") Name
               input#name.form-control(name="name", type="text")
