--- a/app/templates/play/level/modal/multiplayer.jade
+++ b/app/templates/play/level/modal/multiplayer.jade
@@ -5,7 +5,7 @@
     h3(data-i18n="play_level.multiplayer_title") Multiplayer Settings
   
   .modal-body
-    .form-horizontal.form
+    .form
       .form-group.checkbox
         label.control-label(for="multiplayer")
           input#multiplayer(name="multiplayer", type="checkbox", checked=multiplayer)
