--- a/app/templates/editor/level/system/new.jade
+++ b/app/templates/editor/level/system/new.jade
@@ -4,11 +4,10 @@ block modal-header-content
   h3(data-i18n="editor.create_system_title") Create New System
 
 block modal-body-content
-  form.form-horizontal
-    .control-group
+  form.form
+    .form-group
       label(for="level-system-name", data-i18n="general.name").control-label Name
-      .controls
-        input#level-system-name.input-large(name="name", type="text")
+      input.form-control#level-system-name(name="name", type="text")
 
 block modal-footer-content
   button(data-dismiss="modal", data-i18n="common.cancel").btn Cancel
