Removed some more .controls from forms.

--- a/app/templates/play/level/modal/multiplayer.jade
+++ b/app/templates/play/level/modal/multiplayer.jade
@@ -7,7 +7,7 @@
   .modal-body
     .form
       .form-group.checkbox
-        label.control-label(for="multiplayer")
+        label(for="multiplayer")
           input#multiplayer(name="multiplayer", type="checkbox", checked=multiplayer)
           | Multiplayer
         span.help-block Enable others to join your game.
